<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e5e5e5">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="20dp">


        <TextView
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/location"
            android:id="@+id/textView3"
            android:textColor="#000000"/>
        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/maps_card"
            android:id="@+id/maps_card"
            android:layout_marginTop="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transportations"
            android:id="@+id/textView"
            android:background="@drawable/card_no_border"
            android:textColor="#000000"/>
        <TextView
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/contact"
            android:id="@+id/textView3"
            android:textColor="#000000"/>
        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school_office"
            android:id="@+id/school_office"
            android:background="@drawable/card_no_border"
            android:textColor="#000000"/>

        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/administration_department"
            android:id="@+id/admin_depart"
            android:background="@drawable/card_no_border"
            android:textColor="#000000"/>
        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fax"
            android:id="@+id/fax"
            android:background="@drawable/card_no_border"
            android:textColor="#000000"/>
        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            android:id="@+id/homepage"
            android:background="@drawable/card_no_border"
            android:textColor="#000000"/>

    </LinearLayout>

</ScrollView>